--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,83 @@
 body {
-	padding-top: 60px;
+    position: relative;
+    padding-top: 70px;
 }
 
 .login-register {
-	margin-right: 20px;
+    margin-right: 20px;
 }
 
 .navbar-form {
-	position: relative;
-	/* margin-left: 40px; */
+    position: relative;
+    /* margin-left: 40px; */
 }
 
 .navbar-form input[type="text"] {
-	background: #313131;
-	color: #999;
-	border: none;
+    background: #313131;
+    color: #999;
+    border: none;
 }
 
 .navbar-form button[type="submit"] {
-	position: absolute;
-	right: 20px;
-	top: 20%;
-	border: none;
-	background: none;
-}
-
-@media (min-width: 768px) {
-	/* .navbar-btn {
-		display: none;
-	} */
-}
-
-@media (max-width: 992px) {
-	.navbar-form button[type="submit"] {
-		top: 20%;
-	}
-}
-
-@media (max-width: 768px) {
-	.navbar-form button[type="submit"] {
-		top: 30%;
-	}
+    position: absolute;
+    right: 20px;
+    top: 20%;
+    border: none;
+    background: none;
 }
 
 .navbar-form .glyphicon-search {
-	color: #999;
+    color: #999;
 }
 
-.project-container {
-	position: relative;
-    margin: 20px auto;
+.carousel-inner {
+    height: 400px;
+}
+
+.carousel-inner .item {
+    height: 400px;
+}
+
+.carousel img {
     width: 100%;
-    height: 2000px;
+    height: 100%;
 }
 
-.project-container .project-item {
-    position: relative;
+.carousel-control {
+    width: 10%;
+}
+
+.carousel-indicators {
+    bottom: 0px;
+}
+
+.masonry-wrapper {
+    margin: 0 auto;
+    padding: 0;
     overflow: hidden;
 }
 
-.project-container .project-item img {
+#project-container {
+    position: relative;
+    margin: 0 auto;
+    visibility: hidden;
+}
+
+#project-container .project-item {
+    position: relative;
+    display: block;
+    margin: 5px;
+    width: 270px;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+    filter: alpha(opacity=100);
+    overflow: hidden;
+}
+
+.project-item img {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     -ms-transform: scale(1);
@@ -68,9 +86,250 @@ body {
     transition: transform 0.3s ease-out;
 }
 
-.project-container .project-item:hover img {
+.project-item:hover img {
     -webkit-transform: scale(1.3);
     -moz-transform: scale(1.3);
     -ms-transform: scale(1.3);
     transform: scale(1.3);
 }
+
+.project-item .hover-mask {
+    position: absolute;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #000;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    -webkit-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
+
+.project-item:hover .hover-mask {
+    opacity: 0.8;
+    filter: alpha(opacity=100);
+    padding: 20px;
+}
+
+.project-item .hover-mask:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: transparent;
+    border: 0px solid rgba(255, 255, 255, 0.2);
+    -webkit-transition: border 0.3s ease-out;
+    transition: border 0.3s ease-out;
+}
+
+.project-item .hover-mask:hover:after {
+    border-width: 12px;
+}
+
+.project-item .hover-mask .project-title {
+    color: #fff;
+    margin: 0;
+    padding: 16px;
+    font-size: 21px;
+    line-height: 24px;
+    font-weight: 300;
+}
+
+.project-item .hover-mask p {
+    color: #fff;
+    margin: 0;
+    padding: 16px;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 300;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    text-align: right;
+    -webkit-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
+
+.project-item .hover-mask:hover p {
+    bottom: 20px;
+    right: 20px;
+}
+
+.masonry,
+.masonry .masonry-brick {
+    -webkit-transition-duration: 0.7s;
+    -moz-transition-duration: 0.7s;
+    -ms-transition-duration: 0.7s;
+    -o-transition-duration: 0.7s;
+    transition-duration: 0.7s;
+
+    transition-timing-function: ease-in-out;
+}
+
+.masonry {
+    -webkit-transition-property: height, width;
+    -moz-transition-property: height, width;
+    -ms-transition-property: height, width;
+    -o-transition-property: height, width;
+    transition-property: height, width;
+}
+
+.masonry .masonry-brick {
+    -webkit-transition-property: left, right, top, -webkit-transform, opacity;
+    -moz-transition-property: left, right, top, -moz-transform, opacity;
+    -ms-transition-property: left, right, top, -ms-transform, opacity;
+    -o-transition-property: left, right, top, -o-transform, opacity;
+    transition-property: left, right, top, transform, opacity;
+}
+
+#mScrollspy {
+    position: fixed;
+    right: 10px;
+    top: 40%;
+    width: 90px;
+}
+
+#mScrollspy li {
+    width: 100%;
+    background: #eee;
+    color: #008AC1;
+    text-align: center;
+}
+
+#mScrollspy li a {
+    display: block;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
+}
+
+#mScrollspy li.active a {
+    background: #008AC1;
+    color: #fff;
+}
+
+#mTabs {
+    width: 60%;
+    margin: 40px auto;
+}
+
+.tab-pane {
+    padding: 10px;
+}
+
+#mAlert {
+    width: 60%;
+    margin: 40px auto;
+}
+
+#accordion {
+    width: 60%;
+    margin: 40px auto;
+}
+
+#popover {
+    width: 60%;
+    margin: 40px auto;
+}
+
+@media (max-width: 1200px) {
+    #mTabs {
+        width: 70%;
+        margin: 30px auto;
+    }
+
+    #mAlert {
+        width: 70%;
+        margin: 30px auto;
+    }
+
+    #accordion {
+        width: 70%;
+        margin: 30px auto;
+    }
+
+    #popover {
+        width: 70%;
+        margin: 30px auto;
+    }
+}
+
+@media (max-width: 992px) {
+    #mTabs {
+        width: 80%;
+        margin: 20px auto;
+    }
+
+    #mAlert {
+        width: 80%;
+        margin: 20px auto;
+    }
+
+    #accordion {
+        width: 80%;
+        margin: 20px auto;
+    }
+
+    #popover {
+        width: 80%;
+        margin: 20px auto;
+    }
+}
+
+@media (max-width: 768px) {
+    body, html {
+        height: 100%;
+    }
+
+    .navbar-form button[type="submit"] {
+        top: 32%;
+    }
+
+    #project-container .project-item {
+        margin: 0;
+        width: 100%;
+    }
+
+    #project-container .project-item img {
+        width: 100%;
+    }
+
+    #mTabs {
+        width: 90%;
+        margin: 10px auto;
+    }
+
+    #mAlert {
+        width: 90%;
+        margin: 10px auto;
+    }
+
+    #accordion {
+        width: 90%;
+        margin: 10px auto;
+    }
+
+    #popover {
+        width: 90%;
+        margin: 10px auto;
+    }
+}
+
+
+@media (max-width: 630px) {
+    .carousel-inner {
+        height: 200px;
+    }
+
+    .carousel-inner .item {
+        height: 200px;
+    }
+}
+
+
+
